Fix: design layout issue, remove redundant CSS code.

--- a/Practice1-html-css/css/styles.css
+++ b/Practice1-html-css/css/styles.css
@@ -16,28 +16,26 @@ body {
 /* HEADER START */
 .header {
     background-image: url(../image/Background.png);
-    height: 100vh;
+    min-height: 700px;
+    min-width: 1440px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    color: white;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+    color: #FFFFFF;
+    margin: 0 auto;
 
     /* Top-bar: Dreamshare; login; signup */
     .header-bar {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 40px 60px;
+        padding: 40px 248px;
     }
 }
 
 /* Dreamshare logo */
 .nav-logo {
     font-size: 20px;
-    margin: 0px 200px;
     color: white;
     text-decoration: none;
 
@@ -49,7 +47,7 @@ body {
     display: flex;
     align-items: center;
     gap: 10px;
-    margin-right: 250px;
+    padding-right: 43px;
 
     button {
         height: 36px;
@@ -60,9 +58,8 @@ body {
 /* Button-card component define */
 .button{
     background: transparent;
-    margin: 5px;
     border-radius: 20px;
-    color: white;
+    color: #FFFFFF;
     border: 2px solid transparent;
     &:hover {
         background: transparent;
@@ -72,28 +69,22 @@ body {
 /* End button-card define */
 
 .header-content {
-    display: flex;
-    flex-direction: column;
-    gap: 33px;
-    justify-content: center;
-    align-items: center;
-    margin-top: -126px;
-    height: inherit;
-    width: inherit;
-    /* margin-top: 223px; */
+    width: 426px;
+    margin: 97.5px auto 0;
+    justify-items: center;
 
-    h2 {
+    .header-title {
         font-size: 52px;
         font-weight: 400;
-        line-height: 1.2em;
-        margin: 0;
+        text-align: center;
+        line-height: 1.19em;
+        margin-bottom: 32.5px;
     }
     
-    p {
+    .header-descript {
         font-size: 24px;
         line-height: 24.5px;
-        height: 25px;
-        margin: 0;
+        margin-bottom: 33px;
     }
 
     button {
@@ -101,7 +92,6 @@ body {
         width: 225px;
         height: 40px;
         font-size: 14px;
-        border: 2px solid transparent;
         
         &:hover {
             background: transparent;
@@ -109,5 +99,4 @@ body {
         }
     }
 }
-
 /* HEADER END */
